# CPPgrad

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CPPgrad  README.md  Readme.md  bindings.cpp  cmake_install.cmake  mlp.py  test.py
include/: autograd.h  mlp.h
src/: autograd.cpp  bindings.cpp  main.cpp  mlp.cpp
